Essential SCSS added

--- a/src/index.html
+++ b/src/index.html
@@ -3,31 +3,24 @@
 <head>
   <meta charset="utf-8">
   <title>uCarousel</title>
-  <link rel="stylesheet" href="../stylesheets/lib/qunit-1.14.0.css">
   <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-
   <div class="main">
     <h1 class="headline">uCarousel Demo</h1>
       <div id="content">
         <div class="ucarousel-wrap">
-          <div class="ucarousel-inner">
-            <ul class="ucarousel-list">
+          <ul class="ucarousel-inner">
               <li class="ucarousel-item"><img src="../images/flower-1.jpg"></li>
               <li class="ucarousel-item"><img src="../images/flower-2.jpg"></li>
               <li class="ucarousel-item"><img src="../images/flower-3.jpg"></li>
               <li class="ucarousel-item"><img src="../images/flower-4.jpg"></li>
               <li class="ucarousel-item"><img src="../images/flower-5.jpg"></li>
             </ul>
-          </div>
         </div>
     </div>
   </div>
-  <script src="../js/lib/uCarousel.lib.min.js"></script>
+  <script src="../js/lib/jquery-2.1.0.js"></script>
   <script src="../js/ucarousel.js"></script>
-  <script src="../js/tests.js"></script>
 </body>
 </html>
