--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <div class="main">
     <h1 class="headline">uCarousel Demo</h1>
       <div id="content">
-        <div class="ucarousel-wrap">
+        <div class="ucarousel">
           <ul class="ucarousel-inner">
               <li class="ucarousel-item"><img src="../images/flower-1.jpg"></li>
               <li class="ucarousel-item"><img src="../images/flower-2.jpg"></li>
@@ -22,5 +22,6 @@
   </div>
   <script src="../js/lib/jquery-2.1.0.js"></script>
   <script src="../js/ucarousel.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
